--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.5
+  intl: ^0.17.0
+  percent_indicator: ^4.2.2
+  eva_icons_flutter: ^3.1.0
+  flutter_svg: ^1.1.1+1
 
 dev_dependencies:
   flutter_test:
